# navilearn

./: .dockerignore  .env.example  .gitignore  .sops.yaml  AGENTS.md  CLAUDE.md  Dockerfile  GOAL.md  Home.py  README.md  api.py  app.py  cli.py  docker-compose.yml  pyproject.toml  requirements-deploy.txt  requirements.txt  run.sh  secrets.enc.env
.github/workflows/: deploy-oracle.yml
.streamlit/: config.toml
components/screen_share/: index.html
components/voice_screen/: index.html
core/: artifacts.py  capture.py  classroom.py  concepts.py  config.py  dashboards.py  embeddings.py  exporters.py  graph.py  interview.py  jsonutil.py  llm.py  mentoring.py  messaging.py  multimodal.py  notes.py  parsers.py  pipeline.py  repo.py  sarvam.py  screen_share.py  session.py  storage.py  store.py  stt.py  summarizer.py  training_modules.py  vision.py  voice_screen.py
data/samples/: lesson_photosynthesis.md  meeting_notes.md
db/: schema.sql
deliverables/: NaviLearn-Brief.docx
docs/: API.md  API_DOCS.md  ARCHITECTURE.md  BRIEF.md  CH5_PRIVACY.md  DEPLOY.md  SUBMISSION.md
pages/: 1_Study_Studio.py  2_AI_Interview.py  3_Mentor.py  4_Training_Modules.py  5_Classroom.py  6_Messages.py  7_Teacher.py  8_Learn.py  9_Author.py  Cosolve.py  Interviews.py  Mentor_Feedback.py  Notes.py  Shared.py
supabase/: config.toml
supabase/migrations/: 20260711010000_navilearn_platform.sql
tests/: test_core.py  test_interview.py  test_multimodal.py  test_repo.py  test_sarvam.py  test_training_modules.py
