[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "navilearn"
version = "0.1.0"
description = "Multi-source learning content ingestion and structured study-artifact generation (Challenge 6)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastembed",
    "chromadb",
    "httpx",
    "pydantic",
    "pydantic-settings",
    "pypdf",
    "python-docx",
    "youtube-transcript-api",
    "streamlit",
    "pandas",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
navilearn = "cli:main"

[tool.setuptools]
py-modules = ["cli"]
packages = ["core"]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
